# CaptchaCam

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  License.rtf  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: enhancement-request.md
.github/workflows/: release.yml
src/: main.rs
wix/: main.wxs
