[package]
name = "captchacam"
version = "1.1.2"
edition = "2021"
authors = ["LCH Cloud GmbH <contact@lchcloud.de>", "Dominik Spitzli <d.spitzli@lchcloud.de>"]
homepage = "https://github.com/LCH-Cloud/CaptchaCam"
license = "Apache-2.0"
repository = "https://github.com/LCH-Cloud/CaptchaCam"
description = "CaptchaCam is a command-line tool for controlling the camera and capturing images. It allows adjusting various parameters, such as delay before capturing, the filename of the captured image, choosing the camera by name or number, and much more."
documentation = "https://github.com/LCH-Cloud/CaptchaCam/wiki"
license-file = "LICENSE.md"
keywords = ["command-line-app", "camera", "camera-image", "command-line-tool", "camera-control" ]
categories = ["graphics", "video", "photography", "cli", "utility", "command-line-tool", "command-line-utility", "commandline-tool", "commandline-utility", "commandline", "command-line", "command", "line", "commandline-tool", "command-line-tool", "commandline-utility", "command-line-utility", "commandline-tool", "command-line-tool", "commandline-utility", "command-line-utility", "commandline"]
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.4", features = ["derive"] }
image = "0.24.6"
nokhwa = { version = "0.10.4", features = ["input-native"] }
self_update = { version = "0.37.0", features = ["rustls"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
